hello_k8s_ingress_nginx_template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: {your hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: {your service 1}
            port:
              number: 80
  - host: "www2.ttqq.tk"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: {your service 2}
            port:
              number: 80
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: {your service 3}
            port:
              number: 80
